@@ -143,6 +143,7 @@
     <Compile Include="StandardDrawingView.cs" />
     <Compile Include="SteticComponent.cs" />
     <Compile Include="MonoHotDraw.Tools\UndoableTool.cs" />
+    <Compile Include="MonoHotDraw.Handles\UndoableHandle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
